@@ -1,8 +1,5 @@
 package com.ign.batch;
 
-import java.util.HashSet;
-import java.util.Set;
-
 import org.springframework.batch.item.ItemProcessor;
 import org.springframework.stereotype.Component;
 
@@ -16,9 +13,6 @@ public class ProductTypeProcessor
 
     private final ProductTypeMapper mapper;
 
-    // Prevent duplicate ProductTypes in same batch run
-    private final Set<String> processedTypes = new HashSet<>();
-
     public ProductTypeProcessor(ProductTypeMapper mapper) {
         this.mapper = mapper;
     }
@@ -26,19 +20,12 @@ public class ProductTypeProcessor
     @Override
     public ProductType process(ProductCsvDto item) {
 
-        if (item == null) {
-            return null;
-        }
-        String typeName = item.getProductTypeName();
-        if (typeName == null || typeName.isBlank()) {
-            return null;
-        }
-        typeName = typeName.trim();
-        // Skip duplicates inside same CSV
-        if (processedTypes.contains(typeName)) {
-            return null;
-        }
-        processedTypes.add(typeName);
-        return mapper.map(item);
+    	  if (item.getProductTypeName() == null ||
+    	            item.getProductTypeName().trim().isEmpty()) {
+    	            return null;
+    	        }
+    	 
+    	        return mapper.map(item);
+    	    
     }
 }
